{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "0555c781-28d0-4a54-b518-6c224d27035f",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e49e2e48-647f-4aec-8269-5a91871b6c3d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "22cb7375-1319-41a9-91d5-237d3ce87ca9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LightAttack",
                    "type": "Button",
                    "id": "b77bedf4-9486-46d1-a207-e11ace65551c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HeavyAttack",
                    "type": "Button",
                    "id": "2dda2732-bcbf-4a3d-9bd7-3ea63733d42b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RollToRight",
                    "type": "Button",
                    "id": "6907daf4-0596-425f-a4b8-a81dce0fa290",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RollToLeft",
                    "type": "Button",
                    "id": "1704be2f-2dfe-4c6d-9295-b47370757c40",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f67ec813-c332-4ef8-8bbf-8756837aeba4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "808ae56f-8279-4d5a-aa43-3af8f0d24552",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "AD",
                    "id": "f887bc1e-487f-498b-ade3-b898600c6efa",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "3a712487-79f0-4208-8186-947215734ff0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6d1bb1d0-85fe-4567-b930-ffe3bdc65a0d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7f25257b-55dd-4ea7-95a4-0a43ba8116e2",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61786072-6c0d-4de3-8836-bfdfcba07754",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78194ad8-8b58-42fb-8f3b-a3614176b18d",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1cde2d5-6250-46e3-a278-10287446acff",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0dcc2425-b714-4eb1-ac33-7bd9817e2dcc",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "RollToRight",
                    "id": "466151a0-10d6-4d3c-9e64-9af131e2fe69",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RollToRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "3be43ab1-dc3a-4fb6-8cca-f58ced02bc6a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RollToRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Button",
                    "id": "83dfac6f-09a9-4574-bb18-ccee0b2302e2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RollToRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "RollToLeft",
                    "id": "bb3dc0ca-b511-457a-888a-f2ca0561dc74",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RollToLeft",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "8674b6f6-9331-4e70-9c71-345bf0358375",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RollToLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "e97eb894-bbfa-4c09-bc48-8edcdb8f98aa",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RollToLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}